--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,35 +13,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_label_lock"
-        android:id="@+id/button"
+        android:id="@+id/button_lock"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/button_lockX2"
-        android:layout_alignEnd="@+id/button_lockX2" />
+        android:layout_alignEnd="@+id/button_lockX2"
+        android:onClick="onClickListener" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_label_unlock"
         android:id="@+id/button_unlock"
-        android:layout_alignBottom="@+id/button"
+        android:layout_alignBottom="@+id/button_lock"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignLeft="@+id/button_unlockX2"
-        android:layout_alignStart="@+id/button_unlockX2" />
+        android:layout_alignStart="@+id/button_unlockX2"
+        android:onClick="onClickListener" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btn_label_lockX2"
         android:id="@+id/button_lockX2"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/button_lock"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="40dp"
         android:layout_toLeftOf="@+id/imageView"
-        android:layout_toStartOf="@+id/imageView" />
+        android:layout_toStartOf="@+id/imageView"
+        android:onClick="onClickListener" />
 
     <Button
         android:layout_width="wrap_content"
@@ -52,7 +55,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_toRightOf="@+id/imageView"
-        android:layout_toEndOf="@+id/imageView" />
+        android:layout_toEndOf="@+id/imageView"
+        android:onClick="onClickListener" />
 
     <TextView
         android:layout_width="wrap_content"
